--- a/packages/hyphenated-en-us/package.json
+++ b/packages/hyphenated-en-us/package.json
@@ -2,6 +2,11 @@
   "name": "hyphenated-en-us",
   "version": "1.0.0",
   "license": "MIT",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/"
+  ],
   "main": "dist/hyphenated-en-us.cjs.js",
   "scripts": {
     "build": "rollup -c"
