--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "lerna run build",
     "prepublishOnly": "yarn build",
+    "release": "lerna publish",
     "test": "jest"
   },
   "devDependencies": {
