Prepare for publishing packages (#3)
* Add README for each package

* Add LICENSE for each package

* Add files sections to package.json

* Add prepublishOnly npm script

* Add publish npm script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   ],
   "scripts": {
     "build": "lerna run build",
+    "prepublishOnly": "yarn build",
+    "release": "lerna publish",
     "test": "jest"
   },
   "devDependencies": {
