--- a/packages/hyphenated/package.json
+++ b/packages/hyphenated/package.json
@@ -12,7 +12,7 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "hyphenated-en-us": "1.0.0"
+    "hyphenated-en-us": "^1.0.0"
   },
   "engines": {
     "node": ">=8"
