--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run build",
+    "build": "node scripts/build.js",
     "prepublishOnly": "yarn build",
     "release": "lerna publish",
     "test": "jest"
@@ -14,6 +14,8 @@
     "@babel/preset-env": "7.4.4",
     "@types/jest": "24.0.12",
     "babel-jest": "24.8.0",
+    "chalk": "2.4.2",
+    "fs-extra": "8.0.1",
     "jest": "24.8.0",
     "lerna": "3.13.4",
     "rollup": "1.11.3",
