--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   ],
   "scripts": {
     "build": "node scripts/build.js",
+    "clean": "node scripts/clean.js",
     "prepublishOnly": "yarn build",
     "release": "lerna publish",
     "test": "jest"
@@ -15,6 +16,7 @@
     "@types/jest": "24.0.12",
     "babel-jest": "24.8.0",
     "chalk": "2.4.2",
+    "child-process-promise": "2.2.1",
     "fs-extra": "8.0.1",
     "jest": "24.8.0",
     "lerna": "3.13.4",
