Exclude dist folders from testing

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "release": "lerna publish",
     "test": "jest"
   },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "dist/"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "7.4.4",
     "@babel/preset-env": "7.4.4",
