--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   ],
   "scripts": {
     "build": "node scripts/build.js",
+    "clean": "node scripts/clean.js",
     "prepublishOnly": "yarn build",
     "release": "lerna publish",
     "test": "jest"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "dist/"
+    ]
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
@@ -15,6 +21,7 @@
     "@types/jest": "24.0.12",
     "babel-jest": "24.8.0",
     "chalk": "2.4.2",
+    "child-process-promise": "2.2.1",
     "fs-extra": "8.0.1",
     "jest": "24.8.0",
     "lerna": "3.13.4",
