--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node scripts/build.js",
     "clean": "node scripts/clean.js",
     "prepublishOnly": "yarn build",
-    "release": "lerna publish --contents dist",
+    "bump": "lerna version",
+    "release": "yarn test && yarn build && lerna publish from-git --contents dist",
     "test": "jest"
   },
   "jest": {
