--- a/packages/hyphenated-de/package.json
+++ b/packages/hyphenated-de/package.json
@@ -1,6 +1,17 @@
 {
   "name": "hyphenated-de",
   "version": "1.1.0",
+  "keywords": [
+    "hyphenation",
+    "javascript",
+    "library"
+  ],
+  "bugs": "https://github.com/sergeysolovev/hyphenated/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sergeysolovev/hyphenated.git",
+    "directory": "packages/hyphenated-de"
+  },
   "license": "MIT",
   "main": "index.js",
   "engines": {
