--- a/packages/hyphenated-de/package.json
+++ b/packages/hyphenated-de/package.json
@@ -6,6 +6,7 @@
     "javascript",
     "library"
   ],
+  "homepage": "https://github.com/sergeysolovev/hyphenated",
   "bugs": "https://github.com/sergeysolovev/hyphenated/issues",
   "repository": {
     "type": "git",
